<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RecuperarContrasenaPreguntaActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblRecuperarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        style="@style/titulo"
        android:text="@string/headerRecuperarContrasea"
        />

    <TextView
        android:id="@+id/lblRecuperarUsuarioPregunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        style="@style/texto"
        android:text="@string/lblRecuperarPregunta"
        />

    <EditText
        android:id="@+id/txtRecuperarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtRecuperarPreguntaRespuesta"
        style="@style/texto"
        tools:ignore="Autofill" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnRecuperarCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:layout_weight="1"
            android:text="@string/btnRecuperarContrasenaCancelar"
            style="@style/boton"/>
        <Button
            android:id="@+id/btnRecuperarEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:layout_weight="1"
            android:text="@string/btnRecuperarContrasenaEnviar"
            style="@style/boton"/>

    </LinearLayout>



</LinearLayout>