<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RecuperarContrasenaActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/lblPescadoRegistro"
        android:layout_margin="14dp"
        android:textAlignment="center"
        android:text="@string/headerRecuperarContrasea"
        style="@style/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/lblRecuperarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/texto"
        android:layout_margin="14dp"
        android:text="@string/lblRecuperarContrasenaUsuaurio"
        />

    <EditText
        android:id="@+id/txtRecuperarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="32"
        style="@style/texto"
        android:layout_margin="14dp"
        android:digits="qwertyuiopasdfghjklzxcvbnm0123456789"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        tools:ignore="Autofill" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/btnRecuperarCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/boton"
        android:layout_margin="14dp"
        android:layout_weight="1"
        android:text="@string/btnRecuperarContrasenaCancelar"
        />
    <Button
        android:id="@+id/btnRecuperarEnviar"
        android:layout_width="match_parent"
        style="@style/boton"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:layout_weight="1"
        android:text="@string/btnRecuperarContrasenaEnviar"
        />

</LinearLayout>

    <TextView
        android:id="@+id/btnOlvido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/texto"
        android:layout_margin="14dp"
        android:text="@string/lblRecuperarContrasenaPregunta"
        android:textAlignment="center"
        android:visibility="gone"
        />

</LinearLayout>