<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.ReporteFragment"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ilFhInicio"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <com.santalu.maskedittext.MaskEditText
                android:id="@+id/txtFhInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="14dp"
                android:drawableRight="@drawable/ic_calendar"
                android:inputType="date"
                android:hint="@string/lblReportePescaFechaInicio"
                app:met_mask="##/##/####"
                style="@style/texto"
                tools:ignore="Autofill" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ilFhFInal"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <com.santalu.maskedittext.MaskEditText
                android:id="@+id/txtFhFin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:drawableRight="@drawable/ic_calendar"
                android:inputType="date"
                android:hint="@string/lblReportePescaFechaFinal"
                app:met_mask="##/##/####"
                style="@style/texto"
                tools:ignore="Autofill" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/ilRecurso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <AutoCompleteTextView
                android:id="@+id/txtRecurso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:hint="@string/lblReportePescaRecurso"
                style="@style/texto" />
        </android.support.design.widget.TextInputLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iconRecurso"
            android:src="@drawable/baseline_arrow_drop_down_black_24"
            android:layout_marginRight="14dp"
            android:layout_alignTop="@+id/ilRecurso"
            android:layout_alignBottom="@+id/ilRecurso"
            android:layout_alignRight="@+id/ilRecurso"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnReportePescaLimpiar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:layout_weight="1"
            android:text="@string/btnReportePescaLimpiar"
            style="@style/boton"/>
        <Button
            android:id="@+id/btnReportePescaGenerar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:layout_weight="1"
            android:text="@string/btnReportePescaGenerar"
            style="@style/boton"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Switch
            android:layout_width="250dp"
            android:width="150dp"
            android:layoutDirection="rtl"
            android:switchPadding="10dp"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:id="@+id/chkReporteAcumulado"
            style="@style/texto"
            android:hint="@string/lblReportePescaAcumulado" />
        <Switch
            android:layout_width="250dp"
            android:width="150dp"
            android:layoutDirection="rtl"
            android:switchPadding="10dp"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            style="@style/texto"
            android:id="@+id/chkReportePorDia"
            android:hint="@string/lblReportePescaPorDia"/>

    </LinearLayout>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/graficaBar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="14dp"
        />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/graficaLine"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="14dp"
        />
    <TextView
        android:id="@+id/txtRecursoId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/txtRecursoDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</LinearLayout>
</ScrollView>
